# FastAPI-CI_CD

./: .gitignore  .pre-commit-config.yaml  main.py  pyproject.toml  tester.py
.github/workflows/: ci.yaml
